// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncompleteListButtons complete and edit are disabled when user is not owner 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-complete"
      disabled=""
      style="pointer-events: none; opacity: 0.3;"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-share"
      href="/lists/1/users_lists"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-edit"
      disabled=""
      href="/lists/1/edit"
      style="pointer-events: none; opacity: 0.3;"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons complete and edit are enabled when user is owner 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-complete"
      style="pointer-events: auto; opacity: 1;"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-share"
      href="/lists/1/users_lists"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-edit"
      href="/lists/1/edit"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is disabled when multiSelect 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-complete"
      style="pointer-events: auto; opacity: 1;"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-share"
      disabled=""
      href="/lists/1/users_lists"
      style="pointer-events: none; opacity: 0.3;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <i
        class="fa fa-compress-alt fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is disabled when user does not have write permissions 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-complete"
      style="pointer-events: auto; opacity: 1;"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-share"
      disabled=""
      href="/lists/1/users_lists"
      style="pointer-events: none; opacity: 0.3;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-edit"
      href="/lists/1/edit"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is enabled when user has write permissions and not multiSelect 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="incomplete-list-complete"
      style="pointer-events: auto; opacity: 1;"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-share"
      href="/lists/1/users_lists"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      class="p-0 mr-3"
      data-test-id="incomplete-list-edit"
      href="/lists/1/edit"
      style="pointer-events: auto; opacity: 1;"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
